<resources>
    <string name="app_name">CashBackTracker</string>
    <string name="app_full_name">CashBack Tracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="bt_cashback">Cashback Tracker</string>
    <string name="bt_giftcard">Gift Card Tracker</string>

    <!-- String Cashback List -->
    <string name="orderlist">Cashback Order List</string>
    <string name="add_order">Add New Order</string>
    <string name="cashbak_company">Manage Cashback Company</string>
    <string name="tv_state">Status</string>
    <string name="tv_main_total_save">Total Saving</string>
    <string name="dialog_body">Do you want to delete this order? If yes, press OK button.</string>
    <string name="toast_no_list">No list exists. Keeping on Main View!</string>
    <string name="main_menu">MENU</string>

    <!--String Add New Order -->
    <string name="tv_order_id">Order Number</string>
    <string name="tv_store">Store Name</string>
    <string name="tv_date">Order Date</string>
    <string name="tv_item">Products Info</string>
    <string name="tv_order_cost">Total Cost (plus tax)</string>
    <string name="tv_cashback_websit">Cashback From</string>
    <string name="tv_cashback_rate">Cashback Percentage</string>
    <string name="tv_cashback_amount">Total Cashback</string>
    <string name="tv_cashback_state">Cashback Status</string>
    <string name="tv_cat">Cashback Category</string>
    <string name="add_submit">Submit</string>
    <string name="no_item_info">Please input all missing blank!</string>
    <string name="toast_input_date_error">Please input date as mm/dd/year format.</string>
    <string name="existed_order">The order number existed! Please use different order number!</string>
    <string name="hint_mm">mm/dd/year</string>
    <string name="hint_dd">dd</string>
    <string name="hint_year">year</string>
    <string name="hint_symbol">/</string>
    <string name="title_add_view">Input your order Information</string>
    <string name="title_add_view_2">Order Information</string>
    <string name="ed_default">Default</string>
    <string name="values_not_valid">The value is not valid! Please input 0 ~ 100!</string>
    <string name="tv_part_cost">Available for CB</string>
    <string name="tv_payment_from">Payment Source</string>
    <string name="tv_payment_hint">Default</string>

    <!-- String Keywords Settings -->
    <string name="tv_cashback_website"><b>Cashback Websites</b></string>
    <string name="tv_key_store"><b>Merchandise</b></string>
    <string name="tv_keywords_delete"><b>DELETE</b></string>
    <string name="tv_keywords_add"><b>ADD</b></string>

    <!-- Notification -->
    <string name="notification_body_1">There is</string>
    <string name="notification_body_2">order\'s cashback does not get approved over 30 days!\nClick for checking!</string>
    <string name="notification_body_3">There are</string>
    <string name="notification_body_4">orders\' cashback do not get approved over 30 days!\nClick for checking!</string>

    <!--Menu -->
    <string name="menu_title">CASHBACK TRACKER MENU</string>
    <string name="menu_1">Summary</string>
    <string name="menu_2">Settings</string>
    <string name="menu_3">Missing Cashback List</string>
    <string name="menu_4">Show List by Category</string>
    <string name="menu_5">Edit Cashback Company</string>

    <string name="summary_title">CASHBACK TRACKER SUMMARY</string>
</resources>
