<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="3">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/tb_row_hight"
        android:id="@+id/tr_1"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_date"
            style="@style/main_order_text_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/tv_date"
            android:layout_column="0"/>

        <TextView
            android:id="@+id/tv_store"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:gravity="center"
            android:text="@string/tv_store"
            android:layout_column="1"/>

        <TextView
            android:id="@+id/tv_cashback_company"
            style="@style/main_order_text_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/tv_cashback_websit"
            android:layout_column="2" />

        <TextView
            android:id="@+id/tv_cashback_state"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:gravity="center"
            android:text="@string/tv_state"
            android:layout_column="3" />

    </TableRow>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_background"
        android:id="@+id/tr_2"
        android:visibility="gone" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/tb_row_hight">

        <TextView
            android:id="@+id/tv_date_2"
            style="@style/main_order_text_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_column="0"  />

        <TextView
            android:id="@+id/tv_store_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:gravity="center"
            android:layout_column="1"  />

        <TextView
            android:id="@+id/tv_cashback_company_2"
            style="@style/main_order_text_style"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_column="2"  />

        <TextView
            android:id="@+id/tv_cashback_state_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/button_color"
            android:gravity="center"
            android:layout_column="3" />
    </TableRow>
</TableLayout>