<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.amazon.orderrecord.AAMainOrderListPage"
    android:background="@color/button_color">

    <LinearLayout
        android:id="@+id/ll_top"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/tv_main_total_save"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:textStyle="italic"
            android:layout_weight="3"
            android:id="@+id/tv_title_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/holo_green_light"
            android:id="@+id/tv_title_2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_ly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_title_hight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/ll_top"
        android:orientation="horizontal"
        android:background="@color/color_background"
        android:weightSum="2" >

        <Button
            android:id="@+id/bt_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/add_order"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#6F737F" />

        <Button
            android:id="@+id/bt_company"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/cashbak_company"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/button_ly"
        android:background="#6F737F" />

    <ExpandableListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_ly"
        android:layout_alignStart="@+id/button_ly"
        android:layout_below="@+id/button_ly"
        android:layout_margin="@dimen/list_margin" >
    </ExpandableListView>

</RelativeLayout>