<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:id="@+id/button_ly"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_title_hight"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/bt_cashback"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/tv_cashback_website"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#6F737F" />

        <Button
            android:id="@+id/bt_store"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/tv_key_store"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/button_ly"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white">

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:id="@+id/ed_keywords_add"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:id="@+id/tv_keywords_add"
            android:text="@string/tv_keywords_add"
            android:textColor="@android:color/white"
            android:background="@color/string_alarm"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_above="@+id/tv_end"
        android:layout_below="@+id/ll_1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:divider="@null" />

    <TextView
        android:id="@+id/tv_end"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>